Make tweet processing async

--- a/serverless/twitter_daemon/Makefile
+++ b/serverless/twitter_daemon/Makefile
@@ -8,4 +8,9 @@ dep-up:
 	dep ensure -update
 
 build:
-	go build
+	go build -race
+	rm -fr twitter_daemon
+
+build-mipsle:
+	GOOS=linux GOARCH=mipsle go build -ldflags "-s -w" -compiler gc
+	rm -fr twitter_daemon
