--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: go
+sudo: false
 go:
- - 1.8.3
+  - 1.8.3
+
+install:
+  - go get -u github.com/golang/dep/cmd/dep
 
 script:
- - echo $GOPATH
- - make ci-build-twitter-daemon
- - make ci-build-twitter-daemon-mipsle
- - ./go-fmt.sh
+  - echo $GOPATH
+  - make ci-build-twitter-daemon
+  - make ci-build-twitter-daemon-mipsle
+
