--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ script:
   - echo $GOPATH
   - make ci-build-twitter-daemon
   - make ci-build-twitter-daemon-mipsle
-
+  - make ci-build-tweet-fail
+  - make ci-build-tweet-success
