--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ install:
   - go get -u github.com/golang/dep/cmd/dep
 
 script:
-  - echo $GOPATH
   - make ci-build-twitter-daemon
   - make ci-build-twitter-daemon-mipsle
   - make ci-build-tweet-fail
   - make ci-build-tweet-success
+  - make ci-build-tweet-dispatcher
   - docker build -t denismakogon/detect-task -f serverless/detect-task/Dockerfile serverless/detect-task
   - docker build -t denismakogon/tweet-fail -f serverless/tweet-fail/Dockerfile serverless/tweet-fail
   - docker build -t denismakogon/tweet-success -f serverless/tweet-success/Dockerfile serverless/tweet-success
+  - docker build -t denismakogon/tweet-dispatcher -f serverless/tweet-dispatcher/Dockerfile serverless/tweet-dispatcher
