--- a/serverless/tweet-dispatcher/Dockerfile
+++ b/serverless/tweet-dispatcher/Dockerfile
@@ -1,8 +1,6 @@
 FROM funcy/go:dev
-RUN go get -u github.com/golang/dep/cmd/dep
 RUN mkdir -p $GOPATH/src/github.com/denismakogon/tweet-dispatcher
 ADD . $GOPATH/src/github.com/denismakogon/tweet-dispatcher
+RUN cd $GOPATH/src/github.com/denismakogon/tweet-dispatcher && go build -o func
 WORKDIR $GOPATH/src/github.com/denismakogon/tweet-dispatcher
-RUN $GOPATH/bin/dep ensure
-RUN go build -o func
 ENTRYPOINT ["./func"]
