--- a/serverless/landmark-recognition/tweet-success/Gopkg.toml
+++ b/serverless/landmark-recognition/tweet-success/Gopkg.toml
@@ -1,4 +1,3 @@
-
 # Gopkg.toml example
 #
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
@@ -23,4 +22,8 @@
 
 [[constraint]]
   branch = "master"
-  name = "github.com/ChimeraCoder/anaconda"
+  name = "github.com/denismakogon/omega2-apps"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/fnproject/fdk-go"
