--- a/serverless/emotion-recognition/emokognition-results-view-html/func.yaml
+++ b/serverless/emotion-recognition/emokognition-results-view-html/func.yaml
@@ -1,6 +1,6 @@
 name: denismakogon/emokognition-view
-version: 0.0.12
-format: http
+version: 0.0.13
+format: json
 path: /index.html
 type: sync
 timeout: 60
