--- a/serverless/minio-pollster/Gopkg.toml
+++ b/serverless/minio-pollster/Gopkg.toml
@@ -22,7 +22,11 @@
 
 [[constraint]]
   name = "github.com/aws/aws-sdk-go"
-  version = "1.13.15"
+  version = "1.13.16"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/denismakogon/omega2-apps"
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
