--- a/serverless/minio-pollster/Gopkg.toml
+++ b/serverless/minio-pollster/Gopkg.toml
@@ -25,8 +25,16 @@
   version = "1.13.16"
 
 [[constraint]]
+  name = "github.com/fnproject/fn_go"
+  version = "0.2.4"
+
+[[constraint]]
   branch = "master"
-  name = "github.com/denismakogon/omega2-apps"
+  name = "github.com/go-openapi/runtime"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/go-openapi/strfmt"
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
