--- a/serverless/twitter-daemon/Gopkg.toml
+++ b/serverless/twitter-daemon/Gopkg.toml
@@ -1,4 +1,3 @@
-
 # Gopkg.toml example
 #
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
@@ -22,9 +21,17 @@
 
 
 [[constraint]]
-  branch = "master"
   name = "github.com/ChimeraCoder/anaconda"
+  version = "2.0.0"
 
 [[constraint]]
-  name = "github.com/gorilla/mux"
-  version = "1.4.0"
+  name = "github.com/fnproject/fn_go"
+  version = "0.2.4"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/go-openapi/runtime"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/go-openapi/strfmt"
